--- a/styles/logic.less
+++ b/styles/logic.less
@@ -11,20 +11,28 @@
 .coloredOp(half-adder-a, and, half-adder-b, half-adder-and-gate);
 
 // Full adder
-.coloredOp(
-	{ .c(@c) { .coloredOp(@c, full-adder-a, and, full-adder-b, full-adder-and-gate-input) } },
-	or,
-	{ .c(@c) { .coloredOp(@c,
-		full-adder-carry,
-		and,
-		{ .c(@c) { .coloredOp(@c, full-adder-a, xor, full-adder-b, full-adder-xor-gate-input); } },
-		full-adder-and-gate-sum
-	); } }, 
-	full-adder-or-gate-carry-out
-);
+.fullAdder(@c, @prefix, @carryIn) {
+	@prefixFormat: %(~'#%s-%%s', @prefix);
+	.coloredOp(@c,
+		{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), and, %(@prefixFormat, b), %(@prefixFormat, and-gate-input)) } },
+		or,
+		{ .c(@c) { .coloredOp(@c,
+			@carryIn,
+			and,
+			{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), %(@prefixFormat, xor-gate-input)); } },
+			%(@prefixFormat, and-gate-sum)
+		); } }, 
+		%(@prefixFormat, or-gate-carry-out)
+	);
+}
 
-.coloredOp(
-	full-adder-carry, xor,
-	{ .c(@c) { .coloredOp(@c, full-adder-a, xor, full-adder-b, none); } },
-	full-adder-xor-gate-carry
-);
+.fullAdder(@mode, @prefix, @carryIn) when (@mode = root), (@mode = probe) {
+	@prefixFormat: %(~'#%s-%%s', @prefix);
+	.coloredOp(
+		@carryIn, xor,
+		{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), none); } },
+		%(@prefixFormat, xor-gate-carry)
+	);
+}
+
+.fullAdder(root, full-adder, full-adder-carry);
