--- a/styles/logic.css
+++ b/styles/logic.css
@@ -1,4 +1,4 @@
-﻿:root {
+:root {
   font-size: 16px;
   box-sizing: border-box;
 }
@@ -1172,4 +1172,5 @@
   font-size: 1.4rem;
   text-align: center;
 }
+
 /*# sourceMappingURL=logic.css.map */
