Fix initial recursive ordering problem
Still emits duplicate parts from combining
AND and XOR on the same inputs; search for
(?:^|~ )([^~]+) ~.*\1

--- a/styles/logic.css
+++ b/styles/logic.css
@@ -31,8 +31,6 @@
 #half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate + div > .Connector:before,
 #half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate + div > .Connector,
 #half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate + div > .Connector:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input + div > .Connector,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input + div > .Connector:before,
 #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input + div > .Connector,
 #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input + div > .Connector:before,
 #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input + div > .Connector,
@@ -41,12 +39,14 @@
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum + div > .Connector:before,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum + div > .Connector,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum + div > .Connector:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector:before,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input + div > .Connector,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input + div > .Connector:before,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector:before,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out + div > .Connector,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out + div > .Connector:before,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Connector:before,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry + div > .Connector,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry + div > .Connector:before,
 #full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry + div > .Connector,
@@ -74,9 +74,9 @@
 #half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate + div > .Result:after,
 #half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate + div > .Result:after,
 #half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate + div > .Result:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result:after,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result:after,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out + div > .Result:after,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result:after,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry + div > .Result:after,
 #full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry + div > .Result:after,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry + div > .Result:after,
@@ -337,12 +337,12 @@
 #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input:after,
 #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input span:before,
 #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out span:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out:after,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out span:before,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out:after,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out span:before,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out:after,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out span:before,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out:after,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry span:before,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry:after,
 #full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry span:before,
@@ -356,9 +356,9 @@
 .ActiveGate.AND,
 #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate,
 #half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum {
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input {
   background-color: #ffc107;
 }
 .ActiveGate.Result + div > .Result,
@@ -370,9 +370,9 @@
 #half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate + div > .Result,
 #half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate + div > .Result,
 #half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate + div > .Result,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result,
 #full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out + div > .Result,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out + div > .Result,
 #full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry + div > .Result,
 #full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry + div > .Result,
 #full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry + div > .Result,
