--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -620,9 +620,21 @@
 
 .fullAdder(@mode, @prefix, @carryIn) when (@mode = root), (@mode = probe) {
 	@prefixFormat: %(~'#%s-%%s', @prefix);
-	.coloredOp(
-		@carryIn, xor,
-		{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), none); } },
-		%(@prefixFormat, xor-gate-carry)
-	);
+	& when (isKeyword(@carryIn)) {
+		.coloredOp(
+			@carryIn,
+			xor,
+			{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), none); } },
+			%(@prefixFormat, xor-gate-carry)
+		);
+	}
+	& when not (isKeyword(@carryIn)) {
+		.coloredOp(
+			// When passing a nested selector as the carryIn, don't probe it a second time.
+			{ .c(@c) when not (@c = probe) { @carryIn(); .c(@c); } },
+			xor,
+			{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), none); } },
+			%(@prefixFormat, xor-gate-carry)
+		);
+	}
 }
