--- a/styles/_combinators.less
+++ b/styles/_combinators.less
@@ -61,36 +61,35 @@
 	#private.callInverted(~'', @second, @content);
 }
 
+// Calls a selector (as a string or a nested ruleset),
+// passing a context for inversion and target content.
+// This should only be used for .op() chaining.
+.callSelector(@c, @selector) when (isKeyword(@selector)) {
+	.callSelector(@c, %(~'#%s', @selector));
+}
+.callSelector(@c, @selector, @mode: extract(@c, 1), @content: extract(@c, 2)) when (isString(@selector)) {
+	&@{selector}:checked		when(@mode = normal) { @content(); }
+	&@{selector}:not(:checked)	when(@mode = invert) { @content(); }
+}
+.callSelector(@c, @selector) when (default()) {  // isruleset(@selector) doesn't work
+	@selector();
+	.c(@c);
+}
+
 #private {
 	// Calls a selector (as a string or a nested ruleset),
 	// inside the context that this selector was called in
-	.call(@combinator, @selector, @content) when (isString(@selector)) {
-		&@{combinator}@{selector}:checked { @content(); }
-	}
-	.call(@combinator, @selector, @content) when  (isKeyword(@selector)) {
-		&@{combinator}#@{selector}:checked { @content(); }
-	}
-
-	.call(@combinator, @selector, @content) when (default()) {  // isruleset(@selector) doesn't work
+	.call(@combinator, @selector, @content) {
 		&@{combinator} {
-			@selector();
-			.c(normal @content);
+			.callSelector(normal @content, @selector);
 		}
 	}
 
 	// Same as above, but passes @invertCombinator
 	// to invert the result of the combinator.
-	.callInverted(@combinator, @selector, @content) when (isString(@selector)) {
-		&@{combinator}@{selector}:not(:checked) { @content(); }
-	}
-	.callInverted(@combinator, @selector, @content) when (isKeyword(@selector)) {
-		&@{combinator}#@{selector}:not(:checked) { @content(); }
-	}
-
-	.callInverted(@combinator, @selector, @content) when (default()) {  // isruleset(@selector) doesn't work
+	.callInverted(@combinator, @selector, @content) {
 		&@{combinator} {
-			@selector();
-			.c(invert @content);
+			.callSelector(invert @content, @selector);
 		}
 	}
 }
