--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -622,7 +622,7 @@
 	@prefixFormat: %(~'#%s-%%s', @prefix);
 	.coloredOp(
 		// When passing a nested selector as the carryIn, don't probe it a second time.
-		{ .c(@c) when not (@c = probe) { .callSelector(@c, @carryIn); } },
+		{ .c(@c) when not (@c = probe) { .callSelector(@carryIn, @c); } },
 		xor,
 		{ .c(@c) { .coloredOp(@c, %(@prefixFormat, a), xor, %(@prefixFormat, b), none); } },
 		%(@prefixFormat, xor-gate-carry)
